# Plotypus

./: .gitattributes  .gitignore  .readthedocs.yaml  README.md  example.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: markdown-link-check-config.json  test-and-publish.yml
dev/: README.md  docs-workflow.md
dev/completed_plans/: feature-gui-parallel-axes-1.md
docs/: cli.rst  conf.py  experimenter.rst  getting-started.rst  types.rst
docs/api/: plotypus.algorithms.rst  plotypus.config.rst  plotypus.core.rst  plotypus.deprecated.rst  plotypus.distance.rst  plotypus.errors.rst  plotypus.evaluator.rst  plotypus.experimenter.rst  plotypus.extensions.rst  plotypus.filters.rst  plotypus.indicators.rst  plotypus.io.rst  plotypus.mpipool.rst  plotypus.operators.rst  plotypus.problems._wfg_functions.rst  plotypus.problems.cf.rst  plotypus.problems.combinatorial.rst  plotypus.problems.dtlz.rst  plotypus.problems.eq_dltz.rst  plotypus.rst  (+8 more)
examples/: _ci.py  constrained_problem.py  constrained_problem_class.py  constrained_problem_function.py  custom_problem.py  custom_problem_class.py  custom_problem_function.py  customize_variator.py  experimenter.py  experimenter_parallel.py  experimenter_plot.py  knapsack.py  logging_example.py  parallel_mpi.py  parallel_multiprocess.py  particle_swarm.py  performance_indicators.py  permutation.py  plot_operators.py  plot_results.py  portfolio_optimization.py  print_attributes.py  print_results.py  problem_with_arguments.py  resumable_run.py  runtime_plot.py  save_results_extension.py  save_results_json.py  tsp.py
gui/: __init__.py  app.py  hiplot_export.py  plotting.py  registries.py  tooltip.py  worker.py
plan/: refactor_app.md  shorten-examples.md
plotypus/: __init__.py  __main__.py  _math.py  _tools.py  algorithms.py  config.py  core.py  deprecated.py  distance.py  errors.py  evaluator.py  experimenter.py  extensions.py  filters.py  indicators.py  io.py  operators.py  problems.py  types.py  weights.py
(+25 files in other folders)
