[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Plotypus"
version = "0.1.1"
description = "Multiobjective optimization in Python with visualization"
authors = ["David Hadka <dhadka@users.noreply.github.com>", "Joseph Kasprzyk <jkasprzyk@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["optimization", "evolutionary algorithm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
packages = [{include = "plotypus"}]

[tool.poetry.urls]
Homepage = "https://github.com/jkasprzyk/Plotypus"
Issues = "https://github.com/jkasprzyk/Plotypus/issues"

[tool.poetry.dependencies]
python = ">=3.12"
mpi4py = {version = "*", optional = true}
parasolpy = {version = "^0.2.1", optional = true}

[tool.poetry.extras]
full = ["mpi4py", "parasolpy"]

[tool.poetry.group.test.dependencies]
pytest = "*"
mock = "*"
flake8 = "*"
flake8-pyproject = "*"
numpy = "*"
matplotlib = "*"
jsonpickle = "*"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx-rtd-theme = "*"

[tool.poetry.scripts]
plotypus = "plotypus.__main__:main"

[tool.pytest.ini_options]
addopts = "-rA -Werror"
testpaths = ["plotypus"]

[tool.flake8]
exclude = [
  ".git",
  "__pycache__",
  "build",
]
extend-ignore = [
  "E302",  # Expected 2 blank lines, found N
  "E305",  # Expected 2 blank lines after class or function definition, found N
  "E501",  # Line too long (N > 79 characters)
  "E741",  # Do not use variables named 'I', 'O', or 'l'
]
per-file-ignores = [
  "__init__.py:F401",  # Module imported but unused
]
